[project]
name = "comfyui-f2-infiniteyou"
description = "ComfyUI_F2_InfiniteYou: FLUX compatibility-focused InfiniteYou node pack"
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = ["facexlib>=0.3.0", "onnxruntime>=1.19.2", "insightface>=0.7.3", "opencv-python>=4.11.0.86", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/bytedance/ComfyUI_InfiniteYou"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yuminjia"
DisplayName = "ComfyUI_F2_InfiniteYou"
Icon = ""
